src/styles.css
/* ... */
.faq-item:hover {
    border: 2px solid #f66136;
}

.faq-question {
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
    padding: 15px;
    background-color: white;
    border-radius: 10px;
}

.faq-question.active {
    background-color: #f66136;
    color: white;
}

.faq-answer {
    display: none;
    padding: 15px;
    background-color: #f66136;
    color: white;
    border-radius: 10px;
    padding-bottom: 5px;
    padding-top: 0;
    font-size: 15px;
}

.toggle-btn {
    background: transparent;
    border: none;
    font-size: 20px;
    cursor: pointer;
    color: #f66136;
}

.toggle-btn.active {
    color: white;
    border: 1px solid white;
    border-radius: 50px;
    width: 25px;
    height: 25px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 8px;
}

.number-circle {
    border-radius: 50px;
    border: 1px solid #f66136;
    width: 25px;
    height: 25px;
    color: #f66136;
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

/* /footer/ */

.go-top {
    display: inline-block;
    background-color: #f66136;
    color: #fcfafa;
    font-size: 24px;
    padding: 10px 17px;
    border-radius: 50%;
    text-decoration: none;
    position: fixed;
    z-index: 1000;
    bottom: 20px;
    right: 95%;
}

.go-top1 {
    display: inline-block;
    color: #fcfafa;
    font-size: 24px;
    padding: 10px 17px;
    border-radius: 50%;
    text-decoration: none;
    background-color: none;
    background: none;
    position: fixed;
    z-index: 1000;
    bottom: 8px;
    right: 0%;
}

@media screen and (max-width: 767px) {
    .go-top {
        font-size: 29px;
        padding: 4px 14px;
        position: fixed;
        bottom: 20px;
        right: 310px;
    }

    .go-top1 {
        font-size: 20px;
        padding: 4px 10px;
        position: fixed;
        bottom: 35px;
        right: 20px;
    }

    .cta .icons {
        display: none;
    }

    .cta:hover .icons {
        display: flex;
        justify-content: center;
        align-items: center;
        position: absolute;
    }

    .icons {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 20px;
        flex-wrap: wrap;
    }
}

.social-icons {
    display: flex;
    flex-direction: row;
    margin-right: 100px;
}

.social-icon {
    display: block;
    width: 100%;
    height: 50px;
    background-size: cover;
    transition: transform 0.3s;
    margin: 20px;
}

.social-icon.instagram {
    color: #f66136;
    margin: 5px 10px;
    font-size: 25px;
}

.social-icon.facebook {
    margin: 5px 10px;
    color: #f66136;
    font-size: 25px;
}

.social-icon.linkedin {
    margin: 5px 10px;
    color: #f66136;
    font-size: 25px;
}

.social-icon:hover {
    transform: scale(1.1);
}

.footer {
    background-color: #000000;
    color: white;
    padding: 40px 40px;
}

.footer-section {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    flex-wrap: wrap;
}

@media screen and (max-width: 767px) {
    .footer-section {
        display: flex;
        flex-direction: column;
    }
}

@media screen and (max-width: 767px) {
    .footer .logo {
        margin: 0;
    }
}

.column img {
    width: 120px;
}

.footer-email {
    margin: 10px;
    margin-right: 100px;
}

/* whatsapp icon */

.wtsapp-icons i {
    font-size: 50px;
    color: #25d366;
    display: inline-block;
    transition: transform 0.5s;
}

@media screen and (max-width: 767px) {
    .wtsapp-icons i {
        font-size: 40px;
    }

    .wtsapp-icons {
        bottom: 130px;
        right: 20px;
    }
}

/* lets talk button */

.ct-button {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background-color: grey;
    border: none;
    border-radius: 20px;
    padding: 10px 20px;
    color: white;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
    border-radius: 20px;
    transition: background-color 0.3s ease;
    z-index: 1000;
}

@media screen and (max-width: 767px) {
    .ct-button {
        padding: 7px 10px;
        font-size: 15px;
        bottom: 85px;
        right: 20px;
    }
}

.blinking {
    font-size: small;
    padding-right: 5px;
}

/* let talk  contact form*/

.cl-icon {
    position: absolute;
    top: 10px;
    right: 10px;
    cursor: pointer;
}

.home-header {
    width: auto;
    height: 100%;
    margin-left: 2px;
    margin-right: 2px;
    position: sticky;
    border-radius: 10px;
    background-color: #f4f4f4;
    font-family: poppins;
}

.nav-link b {
    color: black;
    /* font-family: poppins; */
    font-weight: 500;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18px;
}
.container-1 {
    background-color: black;
    text-align: center;
    height: 60vh;
    padding: 40px;
    border-bottom-left-radius: 50px;
    border-bottom-right-radius: 50px;
}

.head-1 {
    color: #de4c12;
    font-size: 80px;
    font-weight: 100;
}

.head-2 {
    color: #fff;
    font-size: 30px;
}

.para-1,
.para-2 {
    color: grey;
    font-size: 25px;
}

.para-2 {
    margin-top: -15px;
}

.container-2 {
    margin-top: 50px;
    font-family: sans-serif;
}

.small-heading {
    font-size: 18px;
    font-weight: 100;
}

@keyframes scroll-left-right {
    0% {
        transform: translateX(0%);
    }
    50% {
        transform: translateX(-50%);
    }
    100% {
        transform: translateX(0%);
    }
}
/* .arrow, */
.enquiry-arrow {
    background-color: #f66136;
    color: #fff;
    border-radius: 77%;
    padding: 10px;
    margin-left: 20px;
    transform: rotate(45deg);
    margin-right: 10px;
}

.sub-container-2 {
    font-size: 3vw;
    margin-left: -5%;
}

.para-3 {
    margin-left: 13%;
    font-family: math;
    font-size: 40px;
}

.paragraph-1 {
    font-size: 20px;
    font-family: math;
    margin-right: 1%;
    margin-left: 13%;
}
/* ... */

